# memagent

./: CHANGELOG.md  CLAUDE.md  LAUNCH.md  README.md  TOMORROW.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentmemory/: __init__.py  cli.py  core.py  dashboard.py  decay.py  hooks.py  llm.py  llm_features.py  server.py  sync.py
agentmemory/backends/: __init__.py  base.py  postgres.py  sqlite.py
crossagentmemory/: __init__.py  auto_capture.py  cli.py  core.py  dashboard.py  llm_extract.py  server.py
crossagentmemory/backends/: base.py  chroma.py  migrations.py  postgres.py  redis.py  sqlite.py
docs/: GUIDE.md
memagent/: __init__.py  auto_capture.py  backup.py  cli.py  config.py  core.py  daemon.py  dashboard.py  export.py  graph.py  hooks.py  importers.py  llm.py  llm_features.py  mcp_server.py  recall.py  semantic.py  server.py  shell.py  social.py  summarize.py  sync.py  team_sync.py
memagent/backends/: __init__.py  base.py  migrations.py  postgres.py  sqlite.py
tests/: test_auto_capture.py  test_backends.py  test_backup.py  test_config.py  test_core.py  test_daemon.py  test_dashboard.py  test_decay.py  test_fts5.py  test_graph.py  test_importers.py  test_llm.py  test_llm_extract.py  test_llm_features.py  test_mcp_server.py  test_migrate.py  test_migrations.py  test_semantic.py  test_server.py  test_shell.py  test_social.py  test_storage_backends.py  test_summarize.py  test_team_sync.py  test_temporal_multitenant.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
